# MyBaseFramwork

./: .gitignore  MyBaseFramwork.jks  README.md  build.gradle  settings.gradle
MyFramwork/: CMakeLists.txt  build.gradle  proguard-rules.pro
MyFramwork/src/androidTest/java/com/sanshang/li/mybaseframwork/: ExampleInstrumentedTest.java
MyFramwork/src/main/: AndroidManifest.xml
MyFramwork/src/main/assets/: javaScript.html
MyFramwork/src/main/cpp/: native-lib.cpp
MyFramwork/src/main/cpp/my/: my.cpp
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/: MainActivity.java  PassDeviceInfo.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/base/: BaseActivity.java  BaseNormalActivity.java  MyApplication.java  RxBaseActivity.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/custom/: CircleProgressActivity.java  MyCustomViewActivity.java  MyViewTravelActivity.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/drag/: ItemDragHelperCallback.java  ItemSpaceDecoration.java  MyDragActivity.java  MyDragListAdapter.java  OnDragVHListener.java  OnItemMoveListener.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/floatwindow/: FloatWindowActivity.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/handler/: IHandler.java  UIHandler.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/javascript/: JavaScriptActivity.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/jni/: JniActivity.java  JniUtils.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/memory/: MyMemoryActivity.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/model/: Person.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/nim/: LoginActivity.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/observer/: MyObservable.java  MyObserver.java  News.java  Phone.java  TestObserverActivity.java  User.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/receiver/: NetworkBroadcastReceiver.java
MyFramwork/src/main/java/com/sanshang/li/mybaseframwork/record/: AudioRecordUtils.java  CommonDefine.java  FileUtils.java  OtherRecordActivity.java  RecordActivity.java  TimeMethod.java  VoiceCallBack.java
MyFramwork/src/main/res/drawable/: actionbar_bottom_bg.xml  drag_item_bg.xml  drag_item_noraml.xml  drag_item_select.xml
MyFramwork/src/main/res/layout/: activity_audio.xml  activity_base.xml  activity_circle_progress.xml  activity_float_menu.xml  activity_float_window.xml  activity_gesture.xml  activity_group_view.xml  activity_java_script.xml  activity_jni.xml  activity_login.xml  activity_main.xml  activity_my_custom_view.xml  activity_my_drag.xml  activity_my_draw.xml  activity_my_memory.xml  activity_my_other_rx.xml  activity_my_rx_lifecycle.xml  activity_my_view_travel.xml  activity_other_record.xml  activity_record.xml  activity_rx_java.xml  activity_stetho.xml  activity_test_observer.xml  activity_translucent.xml  bar_my_top.xml  float_window_hint.xml  item_drag_list.xml  rl_include.xml  toast_simple_show.xml  toolbar_include.xml  view_float_window.xml
MyFramwork/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  refs.xml  strings.xml  styles.xml
MyFramwork/src/main/res/values-v19/: styles.xml
MyFramwork/src/main/res/values-v21/: styles.xml
MyFramwork/src/main/res/values-zh-rTW/: strings.xml
MyFramwork/src/main/res/xml/: keyboard.xml
MyFramwork/src/test/java/com/sanshang/li/mybaseframwork/: ExampleUnitTest.java
(+106 files in other folders)
